Resoruce cores. Inclusão e recuperação de cores

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Inclusão de cor adicional -->
+    <color name="vermenlho_fiap">#FFED145B</color>
+    <color name="cor_do_texto">#EDC864</color>
+
 </resources>
