Desfio para alterar cor do Card com falha na renderização do emulador.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <!-- Inclusão de cor adicional -->
     <color name="vermenlho_fiap">#FFED145B</color>
     <color name="cor_do_texto">#EDC864</color>
+    <color name="laranja">#FF5722</color>
+
 
 </resources>
